--- a/Operations_and_Expressions_in_Phyton.ipynb
+++ b/Operations_and_Expressions_in_Phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdcqmDPcnTAcocZxr2D+zG",
+      "authorship_tag": "ABX9TyN+infJlt+jf4ZVQF5op9+Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -319,6 +319,55 @@
             "True\n",
             "False\n",
             "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "HUMAN CALCU"
+      ],
+      "metadata": {
+        "id": "18fIoulito2_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from re import M\n",
+        "x = int(input())\n",
+        "y = str(input())\n",
+        "z = int(input())\n",
+        "\n",
+        "if (y == \"p\"): \n",
+        " print(x+z)\n",
+        "elif (y == \"m\"):\n",
+        "  print(x-z)\n",
+        "elif (y == \"t\"):\n",
+        "  print(x*z)\n",
+        "elif (y == \"d\"):\n",
+        "  print(x/z)\n",
+        "else:\n",
+        " print('wrong input')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xtTZp2JLtoCy",
+        "outputId": "386ff173-9c53-4a32-ae73-1ee0af5d349d"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26\n",
+            "d\n",
+            "5\n",
+            "5.2\n"
           ]
         }
       ]
