--- a/Lab_Activity_2.ipynb
+++ b/Lab_Activity_2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFUh3Qa+PEhSV45jMhXeRg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +27,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H7biHZoRpUYt",
-        "outputId": "28229671-19ba-4f15-9ed0-4b8a52e49335"
+        "outputId": "82ede2ac-5886-4899-b9cd-936a6f98a07b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the radius of a circle: 6\n",
-            "The area of the circle is:  113.04\n",
-            "The perimeter of the circle is:  37.68\n"
+            "Enter Radius:  6\n",
+            "Perimeter:  113.1\n",
+            "Area:  37.7\n"
           ]
         }
       ],
       "source": [
-        "    r = float(input(\"Enter the radius of a circle: \"))\n",
-        "    area = 3.14*r**2\n",
-        "    perimeter = 2*3.14*r\n",
-        "    print(\"The area of the circle is: \", area)\n",
-        "    print(\"The perimeter of the circle is: \", perimeter)"
+        "class Circle: \n",
+        "  def __init__(self, radius, pi):\n",
+        "    self.radius = radius \n",
+        "    self.pi =  pi\n",
+        "\n",
+        "  def perimeter(self):\n",
+        "    return self.pi * self.radius ** 2\n",
+        "  def area(self):\n",
+        "    return 2 * self.pi * self.radius\n",
+        "  def result(self):\n",
+        "    print(\"Perimeter: \",  round(self.perimeter(), 2))\n",
+        "    print(\"Area: \", round(self.area(), 2))\n",
+        "\n",
+        "r = int(input(\"Enter Radius:  \"))\n",
+        "\n",
+        "value = Circle(r, 3.141592653589793)\n",
+        "value.result()"
       ]
     }
   ]
