--- a/Lab_Activity_2.ipynb
+++ b/Lab_Activity_2.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H7biHZoRpUYt",
-        "outputId": "82ede2ac-5886-4899-b9cd-936a6f98a07b"
+        "outputId": "c8a90273-32e4-44d0-8921-137db30d902e"
       },
       "outputs": [
         {
@@ -41,8 +41,8 @@
           "name": "stdout",
           "text": [
             "Enter Radius:  6\n",
-            "Perimeter:  113.1\n",
-            "Area:  37.7\n"
+            "Area:  113.1\n",
+            "Perimeter:  37.7\n"
           ]
         }
       ],
@@ -52,13 +52,13 @@
         "    self.radius = radius \n",
         "    self.pi =  pi\n",
         "\n",
-        "  def perimeter(self):\n",
+        "  def Area(self):\n",
         "    return self.pi * self.radius ** 2\n",
-        "  def area(self):\n",
+        "  def Perimeter(self):\n",
         "    return 2 * self.pi * self.radius\n",
         "  def result(self):\n",
-        "    print(\"Perimeter: \",  round(self.perimeter(), 2))\n",
-        "    print(\"Area: \", round(self.area(), 2))\n",
+        "    print(\"Area: \",  round(self.Area(), 2))\n",
+        "    print(\"Perimeter: \", round(self.Perimeter(), 2))\n",
         "\n",
         "r = int(input(\"Enter Radius:  \"))\n",
         "\n",
