--- a/Lab_Activity_2.ipynb
+++ b/Lab_Activity_2.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H7biHZoRpUYt",
-        "outputId": "c8a90273-32e4-44d0-8921-137db30d902e"
+        "outputId": "74521fa5-9bb0-4370-fe92-cac6d2b7ef67"
       },
       "outputs": [
         {
@@ -56,14 +56,14 @@
         "    return self.pi * self.radius ** 2\n",
         "  def Perimeter(self):\n",
         "    return 2 * self.pi * self.radius\n",
-        "  def result(self):\n",
+        "  def Display(self):\n",
         "    print(\"Area: \",  round(self.Area(), 2))\n",
         "    print(\"Perimeter: \", round(self.Perimeter(), 2))\n",
         "\n",
         "r = int(input(\"Enter Radius:  \"))\n",
         "\n",
         "value = Circle(r, 3.141592653589793)\n",
-        "value.result()"
+        "value.Display()"
       ]
     }
   ]
