--- a/Encapsulation_and_Inheritance.ipynb
+++ b/Encapsulation_and_Inheritance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyPrpUp+EtkzNaosiYNm4P",
+      "authorship_tag": "ABX9TyM8R1axeMs8IA4Yiwhta4RR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +97,7 @@
         "id": "otGYNLDmaJ7D",
         "outputId": "fc2fd4c8-5510-4e59-c74e-4e41029739a0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "amNpSy9xf7rP",
         "outputId": "01b0f030-bde0-4192-f5b8-509629a2f5a3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,29 +195,29 @@
         "    def __init__(self):\n",
         "        super().__init__(8)\n",
         "\n",
-        "t = Circle()\n",
-        "t.show_sides()\n",
+        "circle = Circle()\n",
+        "circle.show_sides()\n",
         "\n",
-        "s = Square()\n",
-        "s.show_sides()\n",
+        "square = Square()\n",
+        "square.show_sides()\n",
         "\n",
-        "r = Rectangle()\n",
-        "r.show_sides()\n",
+        "rectangle = Rectangle()\n",
+        "rectangle.show_sides()\n",
         "\n",
-        "p = Star()\n",
-        "p.show_sides()\n",
+        "star = Star()\n",
+        "star.show_sides()\n",
         "\n",
-        "h = Octagon()\n",
-        "h.show_sides()"
+        "octagon = Octagon()\n",
+        "octagon.show_sides()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vg_BIChTiw5b",
-        "outputId": "2fc8e844-0420-4d19-e42a-5f16f7097d89"
+        "outputId": "4c263472-c201-4348-9399-767222d758e7"
       },
-      "execution_count": 19,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
