--- a/Hands on 1.ipynb
+++ b/Hands on 1.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSo46lVKaqW0",
-        "outputId": "fc492da3-f671-48c1-b2de-1ebb2fca871f"
+        "outputId": "8fadb93d-a69f-4c9d-dac4-12f76c89b155"
       },
       "outputs": [
         {
@@ -55,16 +55,16 @@
         "\n",
         "  def grade(self):\n",
         "    average = (self.prelim+self.midterm+self.finals)/3\n",
-        "    print(\"The average grade is\",average)\n",
+        "    print(\"Student's average grade is\",average)\n",
         "\n",
-        "std1 = Person(80,90,88)\n",
-        "std1.grade()\n",
+        "student1 = Person(80,90,88)\n",
+        "student1.grade()\n",
         "\n",
-        "std2 = Person(92,87,100)\n",
-        "std2.grade()\n",
+        "student2 = Person(92,87,100)\n",
+        "student2.grade()\n",
         "\n",
-        "std3 = Person(78,81,83)\n",
-        "std3.grade()\n"
+        "student3 = Person(78,81,83)\n",
+        "student3.grade()\n"
       ]
     }
   ]
